# socky

./: Cargo.toml  socky.service
src/: main.rs
