[package]
name = "socky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
futures = "0.3.28"
nom = "7.1.3"
tokio = { version = "1.28.0", features = ["net", "rt", "macros", "io-util"] }
